--- a/LBSExtend/Utility/Utility.csproj
+++ b/LBSExtend/Utility/Utility.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LogUtility">
+      <HintPath>..\..\..\ThreeField\ThreeField\Utility\LogUtility.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>.\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -40,6 +43,8 @@
     <Reference Include="System.Data.OracleClient" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,6 +55,7 @@
     <Compile Include="JSON.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysParameters.cs" />
+    <Compile Include="WebServiceHelper.cs" />
     <Compile Include="XMLHelper.cs" />
   </ItemGroup>
   <ItemGroup>
